crates/macro/tests/ui/fn_with_bogus_export_name.stderr
error: expected `=`
 --> tests/ui/fn_with_bogus_export_name.rs:4:14
  |
4 | #[export_name("what")]
  |              ^

error: malformed `export_name` attribute input
  --> tests/ui/fn_with_bogus_export_name.rs:10:1
   |
10 | #[export_name = 10]
   | ^^^^^^^^^^^^^^^^^^^ help: must be of the form: `#[export_name = "name"]`
